# rgrbench

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  dataset.json  pyproject.toml
fastapi-tdd-examples/product_service/: README.md  pyproject.toml
fastapi-tdd-examples/product_service/src/: database.py  main.py  models.py  schemas.py
fastapi-tdd-examples/product_service/tests/: test_integration.py
fastapi-tdd-examples/tictactoe_game/: pyproject.toml
fastapi-tdd-examples/todo_app/: pyproject.toml
fastapi-tdd-examples/todo_app/src/: main.py
fastapi-tdd-examples/todo_app/tests/: test_integration.py
harness/: PROTOCOL.md  adapter_check.py  evaluate.py
harness/tests/: test_harness.py
instrument/: AUDIT.md  equivalent_mutants.md  export_scores.py  make_manifest.py  mutation_floors.json  mutation_scores.json  no_network.py  test_gates.py  test_requirements_gates.py
requirements/: PROTOCOL.md  addition_triangulation.md  advent_day6.md  age_calculator.md  alarm_system.md  anagram_detector.md  balanced_brackets.md  bank_account.md  bank_ocr.md  bingo.md  bowling_game.md  calc_stats.md  calculator_tdd_ebook.md  change_calculator.md  character_copy.md  circuit_breaker.md  clam_card.md  code_breaker.md  conways_sequence.md  csv_query_engine.md  darts.md  decorator_examples.md  diamond.md  end_of_line_trim.md  event_sourcing.md  fibonacci.md  fibonacci_brute_force.md  fibonacci_dynamic.md  find_max.md  find_min.md  fizzbuzz_kata.md  fluent_calculator.md  game_of_life.md  gilded_rose.md  greeting.md  heavy_metal_bake_sale.md  hundred_doors.md  ip_validator.md  jelly_vs_tower.md  kata_potter.md  (+50 more)
requirements/apps/: product_service.md  tictactoe_game.md  todo_app.md
src/addition_triangulation/: __init__.py  addition.py
src/advent_day6/: pathfinding.py
src/age_calculator/: __init__.py  age_calculator.py
src/alarm_system/: __init__.py  alarm.py  day_night_switched_alarm.py  hybrid_alarm.py  loud_alarm.py
src/anagram_detector/: __init__.py  anagram_detector.py
src/balanced_brackets/: __init__.py  balanced_brackets.py
src/bank_account/: __init__.py  bank_account.py
src/bank_ocr/: __init__.py  bank_ocr.py
src/bingo/: __init__.py  card.py
src/bowling_game/: game.py
src/calc_stats/: calc_stats.py
src/calculator_tdd_ebook/: __init__.py  any.py  calculator.py  digit_keys.py
src/change_calculator/: calculator.py
src/character_copy/: __init__.py  copier.py
src/circuit_breaker/: __init__.py  breaker.py
tests/: conftest.py  test_addition_triangulation.py  test_advent_day6.py  test_age_calculator.py  test_alarm_system.py  test_anagram_detector.py  test_balanced_brackets.py  test_bank_account.py  test_bank_ocr.py  test_bingo.py  test_bowling_game.py  test_calc_stats.py  test_calculator_tdd_ebook.py  test_change_calculator.py  test_character_copy.py  test_circuit_breaker.py  test_clam_card.py  test_code_breaker.py  test_conways_sequence.py  test_csv_query_engine.py  test_darts.py  test_decorator_registration.py  test_decorator_stringify.py  test_diamond.py  test_end_of_line_trim.py  test_event_sourcing.py  test_fibonacci.py  test_fibonacci_brute_force.py  test_fibonacci_dynamic.py  test_find_max.py  test_find_min.py  test_fizzbuzz.py  test_fluent_calculator.py  test_game_of_life.py  test_gilded_rose.py  test_greeting.py  test_heavy_metal_bake_sale.py  test_hundred_doors.py  test_ip_validator.py  test_jelly_vs_tower.py  (+51 more)
(+136 files in other folders)
