[project]
requires-python = ">=3.12"
name = "product-service"
version = "0.1.0"
description = "Port of Spring Boot Product Service using TDD"
dependencies = [
    "fastapi>=0.104.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
