[project]
name = "todo-app"
version = "0.1.0"
description = "Todo app built with TDD"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
